# Terrain_protocol

./: .gitignore  README.md  pyproject.toml  requirements.txt  rpc_client.py
.github/workflows/: tests.yml
Security/bug_bounty/: config.py  cooldown.py  dao_checker.py  reward_executor.py  run_bounty.py  submission.py
Visualization/: terrain_generator.py  terrain_metrics.py  terrain_viewer.py
backend/bots/: liquidation_bot.py
backend/config/: settings.py
backend/indexer/: events_listener.py  sync.py
backend/oracle/: keeper.py  price_engine.py  terrain_indexer.py
backend/services/: ltv_calculator.py  risk_engine.py
contracts/core/: InterestRateModel.vy  InterestRateStrategy.vy  LendingPool.vy  LiquidationManager.vy  NFTCollateralManager.vy  TreasuryDAO.vy
contracts/governance/: Gouvernance.vy  Governance.vy  Timelock.vy
contracts/interfaces/: IERC20.vy  IERC721.vy  IPriceOracle.vy  IUniswapV2Router.vy
contracts/libraries/: Math.vy  SafeCast.vy
contracts/marketplace/: TerrainMarketplace.vy
contracts/nft/: TerrainNFT.vy
contracts/oracles/: TerrainPriceOracle.vy
contracts/token/: NativeToken.vy
contracts/uniswap/: LiquidityManager.vy
docs/: architecture.md  risk_model.md  tokenomics.md  whitepaper.md
offchain_security/: Keeper_guard.py  alerting.py  circuit_breaker.py  config.py  gouvernance_guard.py  oracle_guard.py  risk_guard.py  supervisor.py
scripts/dao/: create_proposal.py
scripts/deploy/: deploy_lending.py  deploy_nft.py  deploy_token.py
scripts/setup/: init_uniswap_pool.py
tests/e2e/: e2e_test.py
tests/terrain-test-architecture_20260120/tests/: e2e_and_test_runner.py
tests/terrain-test-architecture_20260120/tests/Invariants/: protocol_invariant.py
tests/terrain-test-architecture_20260120/tests/e2e/: e2e_and_test_runner.py
tests/terrain-test-architecture_20260120/tests/fuzz/: fuzz_protocol.py
tests/terrain-test-architecture_20260120/tests/integration/assertions/: economic_checks.py  protocol_invariants.py  security_checks.py
(+24 files in other folders)
